--- a/emi.html
+++ b/emi.html
@@ -1,1 +1,30 @@
-hai from git
+
+<html>
+	<head>
+		welcome to login page
+
+
+	</head>
+
+	<body>
+		<h1>
+			LOGIN PAGE
+
+                 </h1>
+
+
+		 <table border="1">
+
+			 <tr>
+				 <label>
+					 USERNAME
+
+			          </label>
+
+				  <input type="text" id="uname" palceholder="uname">
+
+	        
+
+
+	</body>
+                </html>
